vlib/v/checker/tests/misspelled_mod_fn_name_should_have_suggestion.vv
import os

dump(os.read_fil('abc'))
